k8s/3-webapp.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
  namespace: onaig
  annotations:
    keel.sh/policy: force
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@every 1m"
    keel.sh/imagePullSecret: "keel-dockerconfig"
    keel.sh/image-tag: "latest"
    keel.sh/match-tag: "true"
    keel.sh/approver: "keel"
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      imagePullSecrets:
        - name: keel-dockerconfig
      containers:
        - name: webapp
          image: ghcr.io/damianobarbati/onaig:latest
          imagePullPolicy: Always
          command: ["/bin/sh", "-c"]
          args:
            - pnpm -F passkey app:preview
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "250m"
---

apiVersion: v1
kind: Service
metadata:
  name: webapp
  namespace: onaig
spec:
  selector:
    app: webapp
  ports:
    - port: 80
      targetPort: 3000

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
  namespace: onaig
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  tls:
    - hosts:
        - onaig-passkey.duckdns.org
      secretName: onaig-webapp-tls
  rules:
    - host: onaig-passkey.duckdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webapp
                port:
                  number: 80
