k8s/6-blockchain-ratelimit.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: rpc-rate-limit
  namespace: onaig
spec:
  rateLimit:
    period: 1s
    average: 100
    burst: 200

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rpc-ingress
  namespace: onaig
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: onaig-rpc-rate-limit@kubernetescrd
spec:
  tls:
    - hosts:
        - onaig-rpc.duckdns.org
      secretName: onaig-rpc-tls
  rules:
    - host: onaig-rpc.duckdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: anvil
                port:
                  number: 8545
